--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -10,7 +10,9 @@
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
         
-        <Label Text="Angel Rodriguez...Team: Cristian" 
+        
+
+        <Label Text="EduardoBorraz" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
     </StackLayout>
