--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -1,10 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:WelcomeVUno"
              x:Class="WelcomeVUno.MainPage">
 
     <StackLayout>
+        
         <!-- Place new controls here -->
         <Label Text="Welcome to Xamarin.Forms!" 
            HorizontalOptions="Center"
@@ -13,6 +14,7 @@
         <Label Text="Angel Rodriguez...Team: Cristian" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
+        
     </StackLayout>
 
 </ContentPage>
