--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -9,8 +9,9 @@
         <Label Text="Welcome to Xamarin.Forms!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
-        
-        <Label Text="Angel Rodriguez...Team: Cristian" 
+       
+
+        <Label Text="Misael" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
     </StackLayout>
