Luis Angel Reyes
Edición de Label

--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -9,8 +9,8 @@
         <Label Text="Welcome to Xamarin.Forms!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
-        
-        <Label Text="Angel Rodriguez...Team: Cristian" 
+
+        <Label Text="Luis Reyes!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
     </StackLayout>
