--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -10,9 +10,11 @@
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
         
-        <Label Text="Angel Rodriguez...Team: Cristian" 
+        
+        <Label Text="Antonio Perez" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
+        
     </StackLayout>
 
 </ContentPage>
