--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -11,7 +11,7 @@
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
         
-        <Label Text="Angel Rodriguez...Team: Cristian" 
+         <Label Text="Jhoana Dominguez!" 
            HorizontalOptions="Center"
            VerticalOptions="CenterAndExpand" />
         
