--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -5,22 +5,7 @@
              x:Class="WelcomeVUno.MainPage">
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-            HorizontalOptions="Center"
-            VerticalOptions="CenterAndExpand" />
-        <Label Text="Luis Reyes!"
-            HorizontalOptions="Center"
-            VerticalOptions="CenterAndExpand" />
-        <Label Text="Angel Rodriguez...Team: Cristian" 
-            HorizontalOptions="Center"
-            VerticalOptions="CenterAndExpand" />
-        <Label Text="clan chame" 
-            HorizontalOptions="Center"
-            VerticalOptions="CenterAndExpand" />
-        <Label Text="zincri"
-            HorizontalOptions="Center"
-            VerticalOptions="CenterAndExpand" />
-        <Label Text="EduardoBorraz"
+        <Label Text="Welcome to Xamarin.Rodriguez" 
             HorizontalOptions="Center"
             VerticalOptions="CenterAndExpand" />
     </StackLayout>
