--- a/WelcomeVUno/WelcomeVUno/MainPage.xaml
+++ b/WelcomeVUno/WelcomeVUno/MainPage.xaml
@@ -2,14 +2,50 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:WelcomeVUno"
-             x:Class="WelcomeVUno.MainPage">
+             x:Class="WelcomeVUno.MainPage"
+             Title="Login">
 
-    <StackLayout>
+    <ScrollView>
+        <StackLayout
+            Padding="5">
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
-        
-    </StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                   HorizontalOptions="CenterAndExpand" 
+                   VerticalOptions="CenterAndExpand" />
+            <Image 
+                    Source="w.jpg"
+                    HorizontalOptions="Center"
+                    VerticalOptions="CenterAndExpand"
+                    HeightRequest="100"
+                    WidthRequest="300"/>
+            <StackLayout
+                    VerticalOptions="CenterAndExpand"
+                    Orientation="Vertical"
+                    Padding="30"
+                    Margin="0,0,0,0">
+                <Frame
+                        Margin="0,10,0,0"
+                        HasShadow="true"
+                        OutlineColor="Navy"
+                        BackgroundColor="Navy"
+                        HeightRequest="60"
+                        CornerRadius="30"
+                        Padding="10,0">
+                        <Entry 
+                            TextColor="White"
+                            FontSize="16"
+                            HeightRequest="60"
+                            HorizontalTextAlignment="Center"
+                            Placeholder="usuario"
+                            PlaceholderColor="White"
+                            BackgroundColor="Transparent"
+                            VerticalOptions="Center"></Entry>
+                </Frame>
+                
+                </StackLayout>
+            
+            
+        </StackLayout>
+    </ScrollView>
 
 </ContentPage>
